# Chesslike_Board_Game_Engine_with_Anarchy-Chess

./: .gitignore  CMakeLists.txt  README.md
include/games/chess/: ChessBoard.h  ChessGameState.h  ChessPiece.h
include/games/chess/pieces/: Bishop.h  King.h  Knight.h  Knook.h  Pawn.h  Queen.h  Rook.h
include/logic/: Action.h  GameBoard.h  GameState.h  Move.h  Piece.h
include/logic/actions/: AddPieceAction.h  CapturePieceAction.h  MovePieceAction.h  RemovePieceAction.h  TryCapturePieceAction.h
lib/: HashPair.h
src/: CMakeLists.txt  helloworld.cpp
src/games/chess/: ChessBoard.cpp  ChessGameState.cpp  ChessPiece.cpp
src/games/chess/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Knook.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/logic/: GameBoard.cpp  GameState.cpp  Move.cpp  Piece.cpp
src/logic/actions/: AddPieceAction.cpp  CapturePieceAction.cpp  MovePieceAction.cpp  RemovePieceAction.cpp  TryCapturePieceAction.cpp
test/: CMakeLists.txt  TestBoard.h  TestChessHelpers.h  TestPieces.h  test.cpp
test/games/chess/: ChessBoardTest.cpp  ChessGameStateTest.cpp  ChessPieceTest.cpp
test/games/chess/pieces/: BishopTest.cpp  KingTest.cpp  KnightTest.cpp  KnookTest.cpp  PawnTest.cpp  QueenTest.cpp  RookTest.cpp
test/logic/: ActionTest.cpp  GameBoardTest.cpp  GameStateTest.cpp  MoveTest.cpp  PieceTest.cpp
